From 36dc67c (examples):
=======================

In examples/vector_invariants.ipynb,

(*) Add verification of scale factors

From 464e51c (examples):
=======================

In examples/, 

(*) Add vector_invariants.ipynb to repo
(*) Add __init__.py to repo

From f111826 (scalar):
=====================

In tests/test_scalarInvariants.py,

(*) Add tests for function invariants_from_advariants_method1()
checking invariance

In tests/conftest.py,

(*) Add pytest fixture copol_complex_gains()

From 295912a (scalar):
=====================

In ClosureInvariants/scalarInvariants.py,

(*) Add function invariants_from_advariants_method1() with 
docstring and example

In tests/test_scalarInvariants.py,

(*) Add tests for function invariants_from_advariants_method1()
checking shape and type exceptions

From 7de39c9 (scalar):
=====================

In ClosureInvariants/scalarInvariants.py,

(*) Add function advariants_multiple_loops() with docstring 
and example

In tests/conftest.py,

(*) Add some fixtures for scalar advariant tests

In tests/test_scalarInvariants.py,

(*) Add tests for advariants on lists of correlations on loops

In tests/test_vectorInvariants.py,

(*) Minor updates

From 53b6e54 (scalar):
=====================

In ClosureInvariants/scalarInvariants.py,

(*) Add function advariant() along with docstring and example

In tests/conftest.py,

(*) Add some fixtures for scalar advariant tests

In tests/test_scalarInvariants.py,

(*) Add tests for advariants

From 5691a7a (scalar):
=====================

(*) Update tests/conftest.py for copolar case
(*) Add tests/test_scalarInvariants.py to repo

From 4426115 (scalar):
=====================

(*) Update tests/conftest.py for polarimetric case
(*) Update tests/test_vectorInvariants.py for polarimetric case

From 5b40c36 (scalar):
=====================

(*) Add ClosureInvariants/scalarInvariants.py to repo 

From d39e16b (main):
===================

In ClosureInvariants/vectorInvariants.py,
